--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "test": "jasmine-ts",
+    "migrate": "db-migrate --env test up && db-migrate up",
+    "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
     "tsc": "tsc"
   },
-  "author": "Udacity",
+  "author": "Bernabe Nieto",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
