authentication endpoint and test are all working

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
     "migrate": "db-migrate --env test up && db-migrate up",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "jasmine": "jasmine"
+
   },
   "author": "Bernabe Nieto",
   "license": "ISC",
